# genoselect

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  genoselect-guide.qmd  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  validate.py
.github/workflows/: tests.yml
api/: index.html
docs/: api.md  genoselect-guide.qmd  guide.md  index.md  tutorial.ipynb
examples/: genoselect_demo.ipynb  genoselect_demo.py  genoselect_visual_demo.ipynb
guide/: index.html
search/: search_index.json
src/genoselect/: __init__.py  benchmark.py  crossval.py  ensemble.py  gblup.py  gwas.py  io.py  models.py  qc.py  relationship.py  simulate.py
tests/: test_genoselect.py  test_gwas.py  test_io.py
tutorial/: index.html  tutorial.ipynb
